bk_ida/gccida/g2/alloc_aux_for_blocks
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/alloc_aux_for_blocks/src/cfg.c:1103:6: error: use of undeclared identifier 'initialized_6'
if ( initialized_6 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/alloc_aux_for_blocks/src/cfg.c:1111:1: error: use of undeclared identifier 'initialized_6'
initialized_6 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/alloc_aux_for_blocks/src/obj/cfg.o] Error 1
